--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,9 @@
    "entities": [
       "BIB_MMS"
    ],
+   "pages": {
+      "settings": "/#/settings"
+   },
    "contentSecurity": {
       "sandbox": {
          "popups": true
