Fix the ID: records->record

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
    "$schema": "./manifest.schema.json",
-   "id": "ori229/print-bib-records",
+   "id": "ori229/print-bib-record",
    "title": "Print Bib records",
    "description": "Allows quickly printing records from the repository hit list",
    "author": "Ori Miller",
