--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-   "$schema": "./manifest.schema.json",
    "id": "ori229/print-bib-record",
    "title": "Print Bib records",
-   "description": "Allows quickly printing records from the repository hit list",
-   "author": "Ori M.",
+   "description": "Provide an XSL-based printing format for MARC21 bibliographic records, starting with the Library of Congress descriptions.",
+   "subtitle": "Allows quickly printing records from the repository hit list",
+   "author": "Ori Miller",
    "entities": [
       "BIB_MMS"
    ],
@@ -14,6 +14,10 @@
       "sandbox": {
          "popups": true
       }
+   },
+   "icon": {
+      "type": "font",
+      "value": "fa fa-print"
    },
    "fullscreen": {
       "allow": true,
