Add initial help page

--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,7 @@
       "PORTFOLIO"
    ],
    "pages": {
+      "help": "/#/help",
       "settings": "/#/settings",
       "config": "/#/config"
    },
