--- a/package.json
+++ b/package.json
@@ -6,6 +6,18 @@
     "start": "eca start"
   },
   "dependencies": {
-    "@exlibris/exl-cloudapp-base": "^0.1.20"
+    "@angular/common": "^9.1.0",
+    "@angular/core": "^9.1.0",
+    "@angular/forms": "^9.1.0",
+    "@angular/material": "^9.2.0",
+    "@angular/router": "^9.1.0",
+    "@exlibris/exl-cloudapp-angular-lib": "^0.6.0",
+    "@exlibris/exl-cloudapp-base": "^0.6.0",
+    "@ngx-translate/core": "^12.1.0",
+    "eca-components": "^1.3.3",
+    "lodash": "^4.17.15",
+    "ngx-toastr": "^12.0.0",
+    "rxjs": "^6.5.5",
+    "uuid": "^8.0.0"
   }
 }
